--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "FastCgi"]
 	path = FastCgi
 	url = https://github.com/Tomenz/FastCgi
+	ignore = untracked
 [submodule "SocketLib"]
 	path = SocketLib
 	url = https://github.com/Tomenz/SocketLib
@@ -8,6 +9,8 @@
 [submodule "tinyxml2"]
 	path = tinyxml2
 	url = https://github.com/leethomason/tinyxml2.git
+	ignore = untracked
 [submodule "md5"]
 	path = md5
 	url = https://github.com/jianjieluo/md5.git
+	ignore = untracked
