--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,10 @@ ADD_DEFINITIONS(-DUNICODE)
 ADD_DEFINITIONS(-D_UNICODE)
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
     ADD_DEFINITIONS(-DZLIB_WINAPI)
+else()
+    # add_compile_options("$<$<CONFIG:Debug>: -O0>")
+    SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -ggdb")
+    add_compile_options("-Wall" "-Wpedantic" "-Wextra" "-fexceptions")
 endif()
 
 # specify the C++ standard
@@ -16,10 +20,10 @@ include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/SocketLib)
 include_directories(${CMAKE_SOURCE_DIR}/tinyxml2)
 
-add_subdirectory(FastCgi)
-add_subdirectory(SocketLib)
-add_subdirectory(tinyxml2)
-add_subdirectory(SrvLib)
+add_subdirectory(FastCgi EXCLUDE_FROM_ALL)
+add_subdirectory(SocketLib EXCLUDE_FROM_ALL)
+add_subdirectory(tinyxml2 EXCLUDE_FROM_ALL)
+add_subdirectory(SrvLib EXCLUDE_FROM_ALL)
 
 if(UA_ENABLE_ENCRYPTION_OPENSSL)
     link_directories(${OPENSSL_LIB_DIR})
@@ -35,20 +39,22 @@ set(targetSrc
         ${CMAKE_CURRENT_LIST_DIR}/ConfFile.cpp
 )
 add_executable(${PROJECT_NAME} ${targetSrc})
+
 target_link_libraries(${PROJECT_NAME} socketlib)
 target_link_libraries(${PROJECT_NAME} FastCgi)
 target_link_libraries(${PROJECT_NAME} tinyxml2)
 target_link_libraries(${PROJECT_NAME} srvlib)
+
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-if(UA_ENABLE_ENCRYPTION_OPENSSL)
-    target_link_libraries(${PROJECT_NAME} libcrypto)
-    target_link_libraries(${PROJECT_NAME} libssl)
-endif()
+    if(UA_ENABLE_ENCRYPTION_OPENSSL)
+	target_link_libraries(${PROJECT_NAME} libcrypto)
+        target_link_libraries(${PROJECT_NAME} libssl)
+    endif()
 else()
-if(UA_ENABLE_ENCRYPTION_OPENSSL)
-    target_link_libraries(${PROJECT_NAME} crypto)
-    target_link_libraries(${PROJECT_NAME} ssl)
-endif()
+    if(UA_ENABLE_ENCRYPTION_OPENSSL)
+	target_link_libraries(${PROJECT_NAME} crypto)
+        target_link_libraries(${PROJECT_NAME} ssl)
+    endif()
     target_link_libraries(${PROJECT_NAME} pthread)
     target_link_libraries(${PROJECT_NAME} stdc++fs)
 endif()
