Generating of systemctl service file improved.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,11 @@ include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/SocketLib)
 include_directories(${CMAKE_SOURCE_DIR}/tinyxml2)
 
+file(READ "webdav.cpp" SrcFile)
+string(REGEX MATCH "szSrvName = L\"([^\"]*)\"" _ ${SrcFile})
+set(SrvName ${CMAKE_MATCH_1})
+message(STATUS "ServiceName: ${SrvName}")
+
 add_subdirectory(FastCgi EXCLUDE_FROM_ALL)
 add_subdirectory(SocketLib EXCLUDE_FROM_ALL)
 add_subdirectory(tinyxml2 EXCLUDE_FROM_ALL)
@@ -59,6 +64,24 @@ else()
     endif()
     target_link_libraries(${PROJECT_NAME} pthread)
     target_link_libraries(${PROJECT_NAME} stdc++fs)
+endif()
+
+if (NOT MSVC)
+    if (NOT EXISTS(${CMAKE_CURRENT_BINARY_DIR}/${SrvName}srv))
+        file(READ SrvLib/init.d/examplesrv FILE_CONTENTS)
+        string(REPLACE "ExampleSrv" ${SrvName} FILE_CONTENTS ${FILE_CONTENTS})
+        file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/${SrvName}srv ${FILE_CONTENTS})
+    endif()
+
+    if (NOT EXISTS(${CMAKE_CURRENT_BINARY_DIR}/${SrvName}.service))
+        file(READ SrvLib/example.service FILE_CONTENTS)
+        string(REPLACE "ExampleSrv" ${SrvName} FILE_CONTENTS ${FILE_CONTENTS})
+        string(REPLACE "~" ${CMAKE_SOURCE_DIR} FILE_CONTENTS ${FILE_CONTENTS})
+        string(REPLACE "Some Example server" "webdav Service" FILE_CONTENTS ${FILE_CONTENTS})
+        string(REPLACE "example/" "" FILE_CONTENTS ${FILE_CONTENTS})
+        string(REPLACE "example" "" FILE_CONTENTS ${FILE_CONTENTS})
+        file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/${SrvName}.service ${FILE_CONTENTS})
+    endif()
 endif()
 
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
