--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -8,6 +8,16 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+  # Path to the solution file relative to the root of the project.
+  SOLUTION_FILE_PATH: ./SockTest.sln
+
+  # Configuration type to build.
+  # You can convert this to a build matrix if you need coverage of multiple configuration types.
+  # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
+  BUILD_CONFIGURATION: Release
+  OpenSSL_HOME: C:\Program Files\OpenSSL\
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
